drupal/profiles/takepart/themes/takepart3/campaigns/intelchange/intelchange.css
/* ... */
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .addThis>a {
  margin: 0 10px;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .video {
  margin-bottom: 35px;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .name {
  font-size: 1.938em;
  color: rgb(31, 162, 220);
  margin-bottom: 15px;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .details {
  padding: 0 40px 40px 40px;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .facts p {
  font-size: 14px;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .blurb p {
  font-size: 16px;
  font-weight: bold;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .full-text p {
  font-size: 13px;
  text-align: left;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .vote-btn a {
  margin-top: 2.250em;
  margin-bottom: 1.563em;
  padding: 1em 2.875em;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .already-voted p {
  color: #f37424;
  font-weight: bold;
  font-size: 16px;
  padding: 0 2.875em;
  line-height: 1.25em;
  margin: 35px 0;
}
.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .already-voted-this p {
  font-weight: bold;
  font-size: 16px;
  padding: 0 2.875em;
  line-height: 1.25em;
  height: 20px;
  background: url(images/check_27_20.png) no-repeat;
  padding-left: 39px;
  display: inline-block; *display: inline; *zoom: 1;
  margin: 35px auto
}

.page-wordlet-intelchange-vote .intelforchange_modal {
  border-radius: 0;
  border: 5px solid rgb(233, 232, 230);
  max-width: 565px;
}
.page-wordlet-intelchange-vote .intelforchange_content {
  padding: 40px;
  font-family: Verdana, sans-serif;
  font-size: 13px;
}
.page-wordlet-intelchange-vote .intelforchange_content .title {
  font-size: 35px;
  margin: 0 0 0.5em 0;
  color: rgb(2, 111, 171);
}
.page-wordlet-intelchange-vote .intelforchange_modal .error {
  color: rgb(229, 30, 30);
}
.page-wordlet-intelchange-vote .intelforchange_modal .form-submit {
  background: #f37424;
  font-weight: bold;
  color: #fff;
  display: inline-block;
  border-radius: 2px;
  text-decoration: none;
  text-transform: uppercase;
  border: 0;
  font-size: 16px;
  letter-spacing: 1px;
  padding: 16px 77px;
  cursor: pointer;
  margin-bottom: 30px;

  -webkit-transition: background-color .2s ease-in-out;
  transition: background-color .2s ease-in-out;
}
.page-wordlet-intelchange-vote .intelforchange_modal .form-submit:focus,
.page-wordlet-intelchange-vote .intelforchange_modal .form-submit:hover {
  background: #d95604;
}
.page-wordlet-intelchange-vote .intelforchange_modal .footnote {
  color: rgb(133, 133, 133);
  font-size: 12px;
}
.page-wordlet-intelchange-vote .intelforchange_modal .intelforchange_close {
  background: url(/profiles/takepart/themes/takepart3/campaigns/intelchange/images/close_video_sprite.png) left top no-repeat;
  display: block;
  width: 36px;
  height: 36px;
  white-space: nowrap;
  text-indent: 100%;
  overflow: hidden;
  margin-top: 13px;
  margin-right: 13px;
}
.page-wordlet-intelchange-vote .intelforchange_modal .cancel {
  color: rgb(2, 162, 248);
  cursor: pointer;
  margin-top: 2em;
  display: block;
}

.page-wordlet-intelchange-vote .intelforchange_modal h6 {
  font-size: 25px;
  margin: 0 0 0.4em 0;
  color: rgb(75, 54, 57);
}

